# SpJoin

./: .gitignore  CMakeLists.txt  README.md  build_tree.cpp  gen_data.cpp  parse_data_osm.cpp  parse_data_tiger.cpp  run.cpp  run_fg.cpp  run_sedona.py  test_tree.cpp
include/spatialindex/: SpatialIndex.h
include/spatialindex/capi/: CustomStorage.h
include/spatialindex/tools/: PointerPool.h
src/capi/: Index.cc
src/fine_grained/: aggregator.h  distributed.h  distsys.h  engine.cc  engine.h  meta.h  nodeptr.h  workload.h
src/mpi/: communication.h  mpi_global.h  timer.h
src/parallel/: comper.h  conque.h  global.h  ioser.h  serialization.h  spatialjoin.h  task.h  worker.h
src/rtree/: BulkLoader.cc  BulkLoader.h  Index.cc  Leaf.cc  Node.cc  Node.h  RTree.cc  RTree.h
src/spatialindex/: Region.cc  SpatialIndexImpl.cc
src/storagemanager/: Buffer.cc  Buffer.h  DiskStorageManager.cc  DiskStorageManager.h  MemoryStorageManager.cc  MemoryStorageManager.h  RandomEvictionsBuffer.cc
src/tools/: Tools.cc
